# smfnotify

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  config_example.toml  docker-compose.yaml
.github/workflows/: rust.yml
src/: announce.rs  cli.rs  config.rs  feed.rs  files.rs  idkeeper.rs  main.rs
