[package]
name = "smfnotify"
version = "0.2.0"
authors = ["Jochen Kupperschmidt"]
edition = "2021"
rust-version = "1.58.0"
description = "Notify webhook of new posts in Simple Machines Forum instance"
readme = "README.md"
homepage = "https://homework.nwsnet.de/releases/56c7/#smfnotify"
repository = "https://github.com/homeworkprod/smfnotify"
license = "MIT"
keywords = ["forum", "webhook"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0"
clap = { version = "3.2.12", features = ["derive"] }
feed-rs = "1.0"
serde = { version = "1", features = ["derive"] }
toml = "0.5"
ureq = { version = "2.4.0", features = ["json"] }
