[package]
name = "smfnotify"
version = "0.3.0"
authors = ["Jochen Kupperschmidt"]
edition = "2021"
rust-version = "1.66.0"
description = "Notify webhook of new posts in Simple Machines Forum instance"
readme = "README.md"
homepage = "https://homework.nwsnet.de/releases/56c7/#smfnotify"
repository = "https://github.com/homeworkprod/smfnotify"
license = "MIT"
keywords = ["forum", "webhook"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
feed-rs = "1.2"
log = "0.4.17"
serde = { version = "1", features = ["derive"] }
serde_with = "2.2.0"
simple_logger = { version = "4.0.0", features = ["colors", "stderr", "timestamps"] }
toml = "0.5"
ureq = { version = "2.5.0", features = ["json"] }
